change default tmux key

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,7 @@ bind-key -r C-l select-window -t :+
 
 # C-b and C-a are both stupid prefixes
 unbind C-b
-set -g prefix C-a
+set -g prefix `
 
 # look good (does not work on some os x)
 # set -g default-terminal "screen-256color"
