random updates to vim packages, haskell mode for emacs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.swp
 vim/.netrwhist
 #*
+doc/tags
 emacs.d/auto-save-list
 emacs.d/backups/*
 emacs.d/elpa/*
@@ -8,3 +9,4 @@ emacs.d/swank/*
 emacs.d/.smex-items
 emacs.d/places
 emacs.d/eshell
+emacs.d/url
