refactoring my dotfiles to be more sensible, new additions include red prompts when ssh'd into prod servers

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Gareth Jones
-  email = gareth.e.jones@gmail.com
+  email = gjones@drwholdings.com
 [alias]
   co = checkout
   ci = commit
