--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
-*.swp
-vim/.netrwhist
+.vim/.netrwhist
 #*
+.DS_Store
+.svn
+*~
+*.swp
+.*.swp
+.\#*.*
+*/#*
+*/#.*#
 doc/tags
-emacs.d/auto-save-list
-emacs.d/backups/*
-emacs.d/elpa/*
-emacs.d/swank/*
-emacs.d/.smex-items
-emacs.d/places
-emacs.d/eshell
-emacs.d/url
+.emacs.d/auto-save-list
+.emacs.d/backups/*
+.emacs.d/elpa/*
+.emacs.d/swank/*
+.emacs.d/.smex-items
+.emacs.d/places
+.emacs.d/eshell
+.emacs.d/url
