updating ssh config

--- a/ssh/config
+++ b/ssh/config
@@ -1,58 +1,82 @@
+# buildserver
+Host tibuild
+User buildadmin
+HostName sud-chitibld01
+
 # prod stack
 Host prod-is
-  User prodappadmin
-  HostName sup-chipos04
+User prodappadmin
+HostName sup-chiti06
 
 Host prod-ts
-  User prodappadmin
-  HostName sup-chipos06
+User prodappadmin
+HostName sup-chiti07
 
 Host prod-ps
-  User prodappadmin
-  HostName sup-chipos05
+User prodappadmin
+HostName sup-chiti08
 
 # side-by-side stack
 Host sbs-is 
-  User prodappadmin
-  HostName sup-chiti06
+User prodappadmin
+HostName sup-chipos04
 
 Host sbs-ts 
-  User prodappadmin
-  HostName sup-chiti07
+User prodappadmin
+HostName sup-chipos06
 
 Host sbs-ps 
-  User prodappadmin
-  HostName sup-chiti08
+User prodappadmin
+HostName sup-chipos05
 
 # mirror stack
 Host mirror-is mirror-ps
-  User prodappadmin
-  HostName suq-chiposqa01
+User prodappadmin
+HostName suq-chiposqa01
 
 Host mirror-ts
-  User prodappadmin
-  HostName suq-chiposqa02
+User prodappadmin
+HostName suq-chiposqa02
 
 # prod tfls
 Host prod-tfls
-  User prodappadmin
-  HostName sup-chiti02
+User prodappadmin
+HostName sup-chiti02
 
 # prod butler
 Host prod-butler-settles
-  User prodappadmin
-  HostName sup-ldnfas01
+User prodappadmin
+HostName sup-ldnfas01
 
 Host prod-butler-cme
-  User prodappadmin
-  HostName sup-chiticme01
+User prodappadmin
+HostName sup-chiticme01
 
 # prod web 
 Host prod-web-primary
-  User prodappadmin
-  HostName sup-chirisk02
+User prodappadmin
+HostName sup-chirisk02
 
 Host prod-web-backup
-  User prodappadmin
-  HostName sup-chiti02
+User prodappadmin
+HostName sup-chiti02
+
+# dev web
+Host dev-web
+User prodappadmin
+HostName sud-chirisk01
+
+# bravo web 
+Host prod-bravo-primary
+User prodappadmin
+HostName sup-chigto02
+
+Host prod-bravo-backup
+User prodappadmin
+HostName sup-chigto03
+
+# dev web
+Host dev-bravo
+User prodappadmin
+HostName vud-chigtodev01
 
