--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,43 @@
 [user]
-	name = Gareth Jones
-  email = gjones@drwholdings.com
+	name = Justin Dell
+	email = dell.justin@gmail.com
 [alias]
+  w = whatchanged
+  s = status -s
   co = checkout
   ci = commit
+  st = status
+  br = branch
+  rs = reset
+  c = commit -m
+  df = diff
+  di = diff
+  dic = diff --cached
+  a = add
+  subtract = reset HEAD
+  pl = pull
+  plre = pull --rebase
+  ps = push
+  lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+  lo = log --oneline --decorate
+  last = log -1 HEAD
+  out = log origin..HEAD
+  pending = !git --no-pager log origin/master..master && echo
+  missing = !sh -c 'git cherry "$0" | cut -sd + -f 2 | xargs "git show"'
 [color]
-  diff = auto
-  status = auto
   branch = auto
+  diff = auto
+  grep = auto
+  interactive = auto
+  status = auto
+  ui = auto
 [core]
-  excludesfile = /Users/gjones/.gitignore
-  editor = /usr/bin/vim 
+  excludesfile = /home/$HOME/.gitignore
+  editor = mate -w
+  safecrlf = true
 [apply]
   whitespace = nowarn
+[push]
+  default = tracking
+[branch]
+  autosetupmerge = always
